<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGreen"
    tools:context=".TaskPage">


    <ImageButton
        android:id="@+id/btn_taskPageBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_taskGoalBanner"
        android:layout_width="186dp"
        android:layout_height="87dp"
        android:src="@drawable/screenshot_2024_05_01_at_11_35_00am"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_taskIsCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"/>


    <FrameLayout
        android:id="@+id/fl_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_border"
        android:backgroundTint="#C6D8AB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_taskGoalBanner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:maxLength="15"
                android:layout_marginTop="10dp"
                android:background="@drawable/green_border"
                android:backgroundTint="#D9D9D9"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:inputType="text"
                android:padding="8dp"
                android:text="Name"
                android:textColor="#65A48D"
                android:textSize="34sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_deadLine"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/green_border"
                android:textSize="15dp"
                android:textColor="#597BA2"
                android:backgroundTint="#CAE8C4"
                android:gravity="center"
                android:ems="10"
                android:inputType="date"
                android:maxLength="8"
                android:text="02/23/23"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="bottom"
                android:paddingStart="16dp"
                android:text="@string/ShortDescription" />

            <EditText
                android:id="@+id/et_shortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginHorizontal="10dp"
                android:maxLength="20"
                android:background="@drawable/green_border"
                android:padding="16dp"
                android:textColor="#597BA2"
                android:backgroundTint="#A5CE9E"
                android:ems="10"
                android:inputType="text"
                android:text="Short Description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="bottom"
                android:paddingStart="16dp"
                android:text="@string/LongDescription" />

            <EditText
                android:id="@+id/et_longDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_border"
                android:gravity="top"
                android:padding="16dp"
                android:textColor="#597BA2"
                android:backgroundTint="#A5CE9E"
                android:layout_marginBottom="10dp"
                android:lines="5"
                android:maxLines="5"
                android:layout_marginHorizontal="10dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="Long Description" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">




                <ImageButton
                    android:id="@+id/btn_editTask"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/edit2"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/btn_taskDelete"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/delete2" />

            </LinearLayout>



        </LinearLayout>


    </FrameLayout>

    <TextView
        android:id="@+id/tv_subtaskTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:text="Sub Tasks:"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/fl_task"
        android:textSize="25dp"/>

    <ListView
        android:id="@+id/lv_subTaskList"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/green_border"
        android:backgroundTint="#C6D8AB"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtaskTitle"
        tools:layout_editor_absoluteX="7dp" />



    <Button
        android:id="@+id/btn_saveEdits"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="#D9D9D9"
        android:text="Save"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_addSubtask"
        android:text="@string/addsubtask"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="#D9D9D9"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"  />



</androidx.constraintlayout.widget.ConstraintLayout>